- add --show-download ; only show download like for games choosen in menu or
  given using --game parameter
- added --list-games-nsmb, --list-games-mkwiimmfi, --list-games-tokyo,
  --list-games-kirby, --list-games-pokemon, --list-games-3ds, --list-games-other
  to show only mods for specific base games

::misc. changes
- new download link for The Legend of Yoshi

::game additions

:::Pokemon
- add support for Pokemon Delta Emerald (patch for Alpha Sapphire)
  - supply HANS configuration files for Delta Emerald
  - since the author of Delta Emerald is working on a patch for Omega Ruby
    aswell, the game and created files are called "DeltaEmerald-AS"
    [obviously they will be "DeltaEmerald-OR" for patched Omega Ruby]

v7.1.0:
::internal changes
- rewrite downloader function
- supply beat BPS patcher (32 and 64 bit)
- add (yet unused) patching functions for PPF patches
- add (yet unused) patching functions for BPS patches
- code cleanup, remove duplicated code

::bugfixes
- fixup The Legend of Zelda - Parallel Worlds patcher
- fixup --patch command line parameter

::misc. changes
- removed download link for Awesomer Super Luigi Mini (down)
- new download link for RVLution Wii
- new download link for Newer Falling Leaf
- fix download link for Midi's Super Mario Wii
- fix download link for Newer Apocalypse
- New Super Mario Bros. Wii character mod: allow only restoring
  original characters without further changes
- update nsmbw.db

::game additions

:::New Super Mario Bros. Wii
- add support for MLG Super Luigi Bros. Wii

v7.0.0:
::internal changes
- add PATCHIMAGE_DIR new internal variable
- add PATCHIMAGE_DATABASE_DIR new internal variable
- add PATCHIMAGE_OVERRIDE_DIR new internal variable
- add UNP_EXTRA_ARGS new internal variable
- make check_input_rom a common.sh function, prevent duplicated code
- shift around some paths
- update database with New Super Mario Bros. Wii mods
- code review and improvements
- improved Debian GNU/Linux packaging