@@ -1,0 +1,11 @@
+<shortcut>
+    <executable>/3ds/hans/hans.3dsx</executable>
+    <icon></icon>
+    <arg>-f/3ds/hans/titles/RedRuby.txt</arg>
+    <author>TheGreek Boy</author></author>
+</shortcut>
+
+<targets selectable="0">
+    <title mediatype="1">000400000011C400</title>
+    <title mediatype="2">000400000011C400</title>
+</targets>
