@@ -1,0 +1,6 @@
+region : -1
+language : -1
+clock : 1
+romfs : 0
+code : 1
+nim_checkupdate : 1
