@@ -43,5 +43,6 @@ PKMN6:WiltingY:pokemon/pokemonwiltingy.sh
 PKMN7:RisingRuby:pokemon/pokemonrisingruby.sh
 PKMN8:SinkingSapphire:pokemon/pokemonsinkingsapphire.sh
 PKMN9:DeltaEmeraldAS:pokemon/pokemondeltaemerald-as.sh
+PKMN10:RedRuby:pokemon/pokemonredruby.sh
 BSECU:BravelySecondUncensored:bravelyseconduncensored.sh
 ZEL1:ParallelWorlds:parallelworlds.sh
